wordpress-floether/ingressroute-tls.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-floether-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`floether.noobygames.de`)
    kind: Rule
    services:
    - name: wordpress-floether
      #kind: TraefikService
      port: 80
  tls:
    certResolver: letsencrypt
